// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteMeal Component should handle delete button 1`] = `
<div
  className="confirm-modal"
>
  <h3>
    Are you sure you want to delete 
    Nigerian Jollof
    ?
  </h3>
  <div>
    <button
      id="confirm-delete-btn"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
    >
      No
    </button>
  </div>
</div>
`;

exports[`DeleteMeal Component should render the DeleteMeal correctly 1`] = `
<div
  className="confirm-modal"
>
  <h3>
    Are you sure you want to delete 
    Nigerian Jollof
    ?
  </h3>
  <div>
    <button
      id="confirm-delete-btn"
      onClick={[Function]}
    >
      Yes
    </button>
    <button
      onClick={[MockFunction]}
    >
      No
    </button>
  </div>
</div>
`;
